5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1573_2896.log
== TEST (2019-03-13 14:08:34) 
-- CODE:
# Use este codigo como ponto de partida
"boomerang"
# Leitura de valores de entrada
var = input(boomerang)
		

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(boomerang)
NameError: name 'boomerang' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:09:08) 
-- CODE:
# Use este codigo como ponto de partida
"boomerang"
# Leitura de valores de entrada
var = input("boomerang")
		

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:09:11) 
-- CODE:
# Use este codigo como ponto de partida
"boomerang"
# Leitura de valores de entrada
var = input("boomerang")
		

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.19722
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
